# sanic

./: .gitignore  CMakeLists.txt  NANITE_PROGRESS.md  build_and_run.bat  build_log.txt  build_msvc.bat  compile_shaders.bat  goal.md  rt_dispatch_snippet.txt  run_engine.bat
docs/: ARCHITECTURE_REVIEW_RESPONSE.md  WORKPLAN_DEV1_RHI_DX12.md  WORKPLAN_DEV2_SHADERS_MATERIALS.md  WORKPLAN_DEV3_EDITOR_PREVIEW.md
projects/KineticEdge/: KineticEdge.sproj
projects/KineticEdge/Config/: DefaultEngine.sconfig
projects/KineticEdge/Content/Levels/: TestWorld.sworld
projects/KineticEdge/Content/Levels/TestWorld/: Environment.slevel  Splines.slevel  Terrain.slevel
scripts/Sanic.Scripting/: Ability.cs  Destruction.cs  Engine.cs  GravityVolume.cs  KineticController.cs  Sanic.Scripting.csproj  Sanic.Scripting.runtimeconfig.json  SanicBehaviour.cs  ScriptHost.cs  Spline.cs  SplineMovement.cs  Transform.cs
shaders/: atmosphere_lut.comp  barycentric_optimize.comp  bloom_downsample.comp  bloom_upsample.comp  bokeh_dof.comp  build_indirect.comp  card_capture.comp  card_radiance.comp  cloth_simulate.comp  cluster_common.glsl  cluster_cull.comp  cluster_cull_hierarchical.comp  composite_final.comp  cone_trace.comp  cull_meshlets.comp  debug_overlay.comp  deferred_lighting.comp  depth_of_field.comp  dof_coc.comp  exposure.comp  final_gather.comp  foliage.frag  foliage.vert  foliage_cull.comp  gi_composite.comp  gi_temporal.comp  grid.frag  grid.vert  histogram.comp  hzb_cull.comp  hzb_generate.comp  instance_cull.comp  legacy_forward.frag  lut_color_grading.comp  material_bin.comp  material_classify.comp  material_eval.comp  megalights_cluster.comp  megalights_denoise.comp  megalights_sample.comp  (+74 more)
src/: AssetCookerTool.cpp  main.cpp
src/editor/: Editor.cpp  Editor.h  EditorLayout.cpp  EditorLayout.h  EditorRenderer.cpp  EditorRenderer.h  EditorWindow.cpp  EditorWindow.h  ProjectHub.cpp  ProjectHub.h  main_editor.cpp
src/editor/core/: Commands.cpp  Commands.h  EditorTheme.cpp  Selection.cpp  Selection.h  Shortcuts.cpp  Shortcuts.h  UndoSystem.cpp  UndoSystem.h
src/editor/fonts/: IconsMaterialDesign.h  InterBold.h  InterBold_data.h  InterRegular.h  InterRegular_data.h  MaterialDesignIcons_data.h
src/editor/imgui/: ImGuiBackend.cpp  ImGuiBackend.h
src/editor/panels/: AssetBrowser.cpp  AssetBrowser.h  ConsolePanel.cpp  ConsolePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LandscapePanel.cpp  LandscapePanel.h  Menubar.cpp  Menubar.h  Toolbar.cpp  Toolbar.h
src/editor/preview/: PreviewRenderer.cpp  PreviewRenderer.h
src/editor/viewport/: Gizmo.cpp  Gizmo.h  Grid.cpp  Grid.h  SelectionOutline.cpp  SelectionOutline.h  Viewport.cpp  Viewport.h  ViewportCamera.cpp  ViewportCamera.h
src/editor/widgets/: PropertyWidgets.cpp  PropertyWidgets.h
src/engine/: AbilitySystem.cpp  AbilitySystem.h  AccelerationStructureBuilder.cpp  AccelerationStructureBuilder.h  Animation.cpp  Animation.h  AnimationAdvanced.cpp  AnimationAdvanced.h  AssetCooker.cpp  AssetCooker.h  AssetLoader.cpp  AssetLoader.h  AssetSystem.cpp  AssetSystem.h  AsyncComputeScheduler.cpp  AsyncComputeScheduler.h  AsyncPhysics.cpp  AsyncPhysics.h  AudioAdvanced.cpp  AudioAdvanced.h  AudioSystem.cpp  AudioSystem.h  BehaviorTree.cpp  BehaviorTree.h  Camera.cpp  Camera.h  ClothSimulation.cpp  ClothSimulation.h  ClusterCullingPipeline.cpp  ClusterCullingPipeline.h  ClusterHierarchy.cpp  ClusterHierarchy.h  CombatSystem.cpp  CombatSystem.h  DDGISystem.cpp  DDGISystem.h  DeferredRenderer.cpp  DeferredRenderer.h  DescriptorManager.cpp  DescriptorManager.h  (+167 more)
src/engine/core/: Log.h  ViewMode.h  Window.h
src/engine/materials/: MaterialCompiler.cpp  MaterialCompiler.h  MaterialEditor.cpp  MaterialEditor.h  MaterialGraph.cpp  MaterialGraph.h  MaterialNode.cpp  MaterialNode.h
src/engine/materials/MaterialNodes/: CommonNodes.cpp  CommonNodes.h
src/engine/rhi/: RHI.cpp  RHI.h  RHICommandList.h  RHIResources.h  RHIShader.h  RHITypes.h
src/engine/rhi/d3d12/: D3D12CommandList.cpp  D3D12Conversions.cpp  D3D12RHI.cpp  D3D12RHI.h  D3D12Resources.cpp
src/engine/rhi/vulkan/: VulkanCommandList.cpp  VulkanConversions.cpp  VulkanRHI.cpp  VulkanRHI.h  VulkanResources.cpp
src/engine/shaders/: ShaderCache.cpp  ShaderCache.h  ShaderCompilerNew.cpp  ShaderCompilerNew.h  ShaderHotReload.cpp  ShaderHotReload.h  ShaderIncluder.cpp  ShaderIncluder.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderPermutation.cpp  ShaderPermutation.h  ShaderReflection.cpp  ShaderReflection.h
src/shaders/: composition.frag  composition.vert  ddgi_probe_trace.comp  ddgi_probe_update.comp  ddgi_sampling.glsl  depth_downsample.comp  gbuffer.frag  gbuffer.vert  shader.frag  shader.vert  shadow.vert  ssr.comp  ssr_hiz.comp  ssr_temporal.comp  velocity.frag
